// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login button is clicked shows loading indicator 1`] = `
<PlatformKeyboardAvoidingView>
  <Flex
    align="center"
    direction="row"
    justify="between"
  >
    <Connect(BackButton)
      style={
        Object {
          "marginLeft": 5,
          "marginTop": 25,
        }
      }
    />
    <Button
      buttonTextStyle={
        Object {
          "fontSize": 14,
          "letterSpacing": 2,
        }
      }
      onPress={[Function]}
      style={
        Object {
          "marginRight": 10,
          "marginTop": 25,
        }
      }
      text="DONE"
      type="transparent"
    />
  </Flex>
  <Flex
    justify="center"
    style={
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "paddingHorizontal": 40,
      }
    }
    value={1}
  >
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#52C5DC",
          "fontSize": 36,
          "letterSpacing": 2,
          "lineHeight": 32,
          "paddingVertical": 10,
          "textAlign": "center",
        }
      }
      type="header"
    >
      two-step verification
    </MyText>
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#ffffff",
          "fontSize": 16,
          "letterSpacing": 0.25,
          "lineHeight": 24,
          "paddingVertical": 10,
          "textAlign": "center",
        }
      }
    >
      Enter verification code from your authenticator app.
    </MyText>
    <Component>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 12,
          }
        }
      >
        Verification Code
      </MyText>
      <Input
        autoFocus={true}
        blurOnSubmit={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Verification Code"
        placeholderTextColor="white"
        returnKeyType="done"
        value=""
      />
    </Component>
  </Flex>
  <LoadingWheel />
</PlatformKeyboardAvoidingView>
`;

exports[`renders correctly 1`] = `
<PlatformKeyboardAvoidingView>
  <Flex
    align="center"
    direction="row"
    justify="between"
  >
    <Connect(BackButton)
      style={
        Object {
          "marginLeft": 5,
          "marginTop": 25,
        }
      }
    />
    <Button
      buttonTextStyle={
        Object {
          "fontSize": 14,
          "letterSpacing": 2,
        }
      }
      onPress={[Function]}
      style={
        Object {
          "marginRight": 10,
          "marginTop": 25,
        }
      }
      text="DONE"
      type="transparent"
    />
  </Flex>
  <Flex
    justify="center"
    style={
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "paddingHorizontal": 40,
      }
    }
    value={1}
  >
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#52C5DC",
          "fontSize": 36,
          "letterSpacing": 2,
          "lineHeight": 32,
          "paddingVertical": 10,
          "textAlign": "center",
        }
      }
      type="header"
    >
      two-step verification
    </MyText>
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#ffffff",
          "fontSize": 16,
          "letterSpacing": 0.25,
          "lineHeight": 24,
          "paddingVertical": 10,
          "textAlign": "center",
        }
      }
    >
      Enter verification code from your authenticator app.
    </MyText>
    <Component>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 12,
          }
        }
      >
        Verification Code
      </MyText>
      <Input
        autoFocus={true}
        blurOnSubmit={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Verification Code"
        placeholderTextColor="white"
        returnKeyType="done"
        value=""
      />
    </Component>
  </Flex>
</PlatformKeyboardAvoidingView>
`;
